--- a/MediaPipe.ipynb
+++ b/MediaPipe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNJX/UuV5MpUkCKpJecOsT",
+      "authorship_tag": "ABX9TyOsSdQVEBP2HbzfOKGwPvP5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,16 +36,14 @@
         "import math\n",
         "import csv\n",
         "import os\n",
-        "import datetime\n",
-        "import zipfile\n",
-        "import requests"
+        "import datetime"
       ],
       "metadata": {
         "id": "DPRK77pQX7IN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8fb43131-abe3-41d9-9587-79d337c2a266"
+        "outputId": "2868ca33-ac4c-4106-9e6e-0af52073f1fb"
       },
       "execution_count": 1,
       "outputs": [
@@ -53,18 +51,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting mediapipe\n",
-            "  Downloading mediapipe-0.10.8-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m45.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: absl-py in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.4.0)\n",
+            "Requirement already satisfied: mediapipe in /usr/local/lib/python3.10/dist-packages (0.10.8)\n",
+            "Requirement already satisfied: absl-py in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.4.0)\n",
             "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.1.0)\n",
             "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.5.26)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from mediapipe) (3.7.1)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.23.5)\n",
             "Requirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.10/dist-packages (from mediapipe) (4.8.0.76)\n",
             "Requirement already satisfied: protobuf<4,>=3.11 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (3.20.3)\n",
-            "Collecting sounddevice>=0.4.4 (from mediapipe)\n",
-            "  Downloading sounddevice-0.4.6-py3-none-any.whl (31 kB)\n",
+            "Requirement already satisfied: sounddevice>=0.4.4 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (0.4.6)\n",
             "Requirement already satisfied: CFFI>=1.0 in /usr/local/lib/python3.10/dist-packages (from sounddevice>=0.4.4->mediapipe) (1.16.0)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (1.2.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (0.12.1)\n",
@@ -75,9 +70,7 @@
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (3.1.1)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (2.8.2)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from CFFI>=1.0->sounddevice>=0.4.4->mediapipe) (2.21)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n",
-            "Installing collected packages: sounddevice, mediapipe\n",
-            "Successfully installed mediapipe-0.10.8 sounddevice-0.4.6\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n"
           ]
         }
       ]
@@ -85,7 +78,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input = 'folder'\n",
+        "input = 'file'\n",
         "\n",
         "url = f\"https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos.zip\"\n",
         "!wget {url}\n",
@@ -114,29 +107,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cgx3G764f7jU",
-        "outputId": "a4417746-1e35-4683-b8bd-4e1cb4a72630"
+        "outputId": "23983f29-ea17-45a4-d16a-5653666de9ae"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-12-12 14:07:52--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos.zip\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2023-12-12 15:41:02--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos.zip\n",
+            "Resolving github.com (github.com)... 140.82.114.4\n",
+            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos.zip [following]\n",
-            "--2023-12-12 14:07:52--  https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos.zip\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "--2023-12-12 15:41:02--  https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 49317746 (47M) [application/zip]\n",
             "Saving to: ‘cropped_videos.zip’\n",
             "\n",
-            "cropped_videos.zip  100%[===================>]  47.03M   206MB/s    in 0.2s    \n",
+            "cropped_videos.zip  100%[===================>]  47.03M   141MB/s    in 0.3s    \n",
             "\n",
-            "2023-12-12 14:07:52 (206 MB/s) - ‘cropped_videos.zip’ saved [49317746/49317746]\n",
+            "2023-12-12 15:41:03 (141 MB/s) - ‘cropped_videos.zip’ saved [49317746/49317746]\n",
             "\n",
             "Archive:  cropped_videos.zip\n",
             "replace cropped_videos/output_video__qtYF0FJBWo.mp4? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
@@ -361,22 +354,10 @@
         "        video_processor.process_video()"
       ],
       "metadata": {
-        "id": "t7BKNOfk3BIi",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "778b79ea-fa69-4e9f-c56d-959c5ce6f747"
+        "id": "t7BKNOfk3BIi"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Null.Frames\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
