--- a/Analyze_Video.ipynb
+++ b/Analyze_Video.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "uhi-GPPVuyJg"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,6 +135,15 @@
       ],
       "metadata": {
         "id": "2dZfLBELNun8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The MediaPipe framework is used for pose estimation in videos. The videos are from the created dataset 'cropped_videos', which is part of this repository."
+      ],
+      "metadata": {
+        "id": "e_AyP9t8BLS9"
       }
     },
     {
@@ -150,7 +159,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,6 +344,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Initially, the code establishes the file paths for the input video, output CSV, and processed video. It then creates a 'statistics' directory for organizing output files and constructs paths for the CSV and output video. Finally, the video processing class is initialized, and then the video processing begins."
+      ],
+      "metadata": {
+        "id": "GxE6WnGjGbcH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "input_file = 'cropped_videos/output_video_-M5SITXMA2Y.mp4'\n",
@@ -357,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,6 +385,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since the input for the next step includes the generated CSV file and the unprocessed video (which will be processed in different parts of the swing separately), another folder is created for this specific approach."
+      ],
+      "metadata": {
+        "id": "mX7rf4mzJj5m"
+      }
     },
     {
       "cell_type": "code",
@@ -385,7 +412,7 @@
           "height": 54
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +454,7 @@
       "metadata": {
         "id": "FjotAUhnw35I"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +477,7 @@
       "metadata": {
         "id": "iR5EaBNCvMuz"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +503,7 @@
         },
         "outputId": "d60cfab6-b1dc-4752-ad80-48d6eeea30a0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +542,7 @@
       "metadata": {
         "id": "8KbUgYVbxY8H"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -566,7 +593,7 @@
         },
         "outputId": "81aa203d-9f52-4bfe-c51f-26dea841bc4d"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
