comment the code

--- a/MediaPipe.ipynb
+++ b/MediaPipe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMa6wJoz7OZZ5yzqMOSQAv8",
+      "authorship_tag": "ABX9TyMzysFsg+Jb33Rb3Nkq60Vi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/blob/main/MediaPipe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## MediaPipe"
+      ],
+      "metadata": {
+        "id": "MHd49mb1Nq_U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The provided code implements the class 'MediaPipe_class.py'. There are two options for input formats. It is possible to process either just one file in *.mp4* format or all files of the same format in one selected folder. The output for the first case is a folder named 'statistics,' which includes the processed video with all points, lines, and angles for future analysis, as well as a *.csv* file with statistics for each frame, such as angles and points coordinates."
+      ],
+      "metadata": {
+        "id": "rnpHT-4nOG6C"
+      }
     },
     {
       "cell_type": "code",
@@ -48,7 +66,7 @@
         },
         "outputId": "028af718-9777-45b6-c656-49ac66391a34"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +298,7 @@
       "cell_type": "code",
       "source": [
         "# Set input type\n",
-        "input_type = 'folder'\n",
+        "input_type = 'file'\n",
         "\n",
         "if input_type == 'file':\n",
         "    # SET AN INPUT FILE in the folder cropped_videos\n",
@@ -330,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
