--- a/Yolov7_Pose.ipynb
+++ b/Yolov7_Pose.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNy6PMQQ3LI8zTPYhccFjI+",
+      "authorship_tag": "ABX9TyO+Ou1hpeKG95e2QrrU/oJ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Yolov7 Pose"
+      ],
+      "metadata": {
+        "id": "22muWOkGRCV_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The provided code implements the class 'Yolov7_Pose_class.py'. There are two options for input formats. It is possible to process either just one file in *.mp4* format or all files of the same format in one selected folder. The output for the first case is a folder named 'statistics,' which includes the processed video with all points, lines, and angles for future analysis, as well as a *.csv* file with statistics for each frame, such as angles and points coordinates. For the second case, two folders are created: one named 'result_statistics' for *.csv* files, and the other named 'result_videos' for processed videos in *.mp4* format.\""
+      ],
+      "metadata": {
+        "id": "kwi4grDVRFTp"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,7 +127,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +332,7 @@
         "    output_video_path = os.path.join(statistics_folder, os.path.basename(output_video_name))\n",
         "\n",
         "    video_processor = Yolov7_PoseEstimation(input_file, csv_file_path, output_video_path)\n",
-        "    video_processor.pose_estimation()\n",
+        "    video_processor.process_video()\n",
         "\n",
         "elif input_type == 'folder':\n",
         "    input_folder = 'cropped_videos'\n",
@@ -336,14 +354,14 @@
         "            file_path = os.path.join(input_folder, filename)\n",
         "\n",
         "            video_processor = Yolov7_PoseEstimation(file_path, csv_file_path, output_video_path)\n",
-        "            video_processor.pose_estimation()\n",
+        "            video_processor.process_video()\n",
         "else:\n",
         "    print(\"You have just two options: 'file' or 'folder'\")"
       ],
       "metadata": {
         "id": "ozGG6VHMSYbh"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
