--- a/MediaPipe.ipynb
+++ b/MediaPipe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzysFsg+Jb33Rb3Nkq60Vi",
+      "authorship_tag": "ABX9TyO4M0rl6zMCVCiSBSr4Q3TC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The provided code implements the class 'MediaPipe_class.py'. There are two options for input formats. It is possible to process either just one file in *.mp4* format or all files of the same format in one selected folder. The output for the first case is a folder named 'statistics,' which includes the processed video with all points, lines, and angles for future analysis, as well as a *.csv* file with statistics for each frame, such as angles and points coordinates."
+        "The provided code implements the class 'MediaPipe_class.py'. There are two options for input formats. It is possible to process either just one file in *.mp4* format or all files of the same format in one selected folder. The output for the first case is a folder named 'statistics,' which includes the processed video with all points, lines, and angles for future analysis, as well as a *.csv* file with statistics for each frame, such as angles and points coordinates. For the second case, two folders are created: one named 'result_statistics' for *.csv* files, and the other named 'result_videos' for processed videos in *.mp4* format.\""
       ],
       "metadata": {
         "id": "rnpHT-4nOG6C"
